# molecular-generative-models

./: .gitignore  README.md  model_card.md  pyproject.toml
data/: README.md  sample_smiles.txt
docs/: method.md
models/: vae.pt
notebooks/: demo.ipynb
results/: generated_sample.txt  metrics.json
scripts/: build_artifacts.py  download_data.py  make_sample.py  sample.py  train.py
src/molgen/: __init__.py  checkpoint.py  data.py  grammar.py  latent.py  metrics.py  models.py  tokenizer.py  train.py
tests/: test_molgen.py
