[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "molgen"
version = "0.1.0"
description = "SMILES-based molecular generative models in PyTorch: a recurrent autoencoder and a variational autoencoder with validity, uniqueness, and novelty metrics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
keywords = ["pytorch", "vae", "smiles", "molecular-generation", "cheminformatics"]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "black>=23.0"]
chem = ["rdkit>=2023.3"]

[project.urls]
Repository = "https://github.com/aamirmalik-dr/molecular-generative-models"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
